[project]
name = "advent-of-code"
version = "1.0.0"
description = "Solutions to Advent of Code"
authors = [
  {name = "Sash Sinha", email = "sashsinha1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aocd>=0.1",
  "mypy>=1.13.0",
  "ruff>=0.7.4",
]
[project.urls]
Homepage = "https://github.com/sashsinha/advent_of_code"
Documentation = "https://github.com/sashsinha/advent_of_code/blob/main/README.md"
Repository = "https://github.com/sashsinha/advent_of_code.git"
